--- a/araft/Cargo.toml
+++ b/araft/Cargo.toml
@@ -20,6 +20,7 @@ tonic = "0.11"
 ahash = "0.8"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 rand ={ version = "0.8"}
+thiserror = "1.0"
 
 [build-dependencies]
 tonic-build = "0.11"
