--- a/araft/Cargo.toml
+++ b/araft/Cargo.toml
@@ -21,6 +21,9 @@ ahash = "0.8"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 rand ={ version = "0.8"}
 thiserror = "1.0"
+tempfile = "3.10"
+serde = "1.0"
+serde_json = "1.0"
 
 [build-dependencies]
 tonic-build = "0.11"
