--- a/araft/Cargo.toml
+++ b/araft/Cargo.toml
@@ -15,8 +15,8 @@ tracing-subscriber = "0.3"
 nanoid = "0.4.0"
 config = "0.14"
 argh = "0.1"
-prost = "0.12"
-tonic = "0.11"
+prost = "0.13"
+tonic = "0.12"
 ahash = "0.8"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 rand ={ version = "0.8"}
@@ -24,6 +24,7 @@ thiserror = "1.0"
 tempfile = "3.10"
 serde = "1.0"
 serde_json = "1.0"
+avent ={ version = "1.0.0"}
 
 [build-dependencies]
-tonic-build = "0.11"
+tonic-build = "0.12"
